// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Connector Details Page Edit and save connector YAML 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main StyledProps--padding-large"
    style="height: inherit;"
  >
    <div
      class="Layout--vertical StyledProps--main StyledProps--padding-small"
      style="width: 100%;"
    >
      <div
        class="StyledProps--font StyledProps--main buttonContainer"
      />
      <div
        class="Layout--horizontal StyledProps--main"
        style="height: 100%;"
      >
        <div
          class="fullWidth"
        >
          <div />
          <div
            class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
          >
            <button
              class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--margin-top-large Button--with-current-color"
              disabled=""
              id="saveYAMLChanges"
              tabindex="-1"
              title=""
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                saveChanges
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Connector Details Page Edit details test 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main StyledProps--padding-large"
    style="height: inherit;"
  >
    <div
      class="Layout--vertical StyledProps--main StyledProps--padding-small"
      style="width: 67%;"
    >
      <div
        class="StyledProps--font StyledProps--main buttonContainer"
      />
      <div
        class="Layout--horizontal StyledProps--main"
        style="height: 100%;"
      />
    </div>
    <div
      class="Layout--vertical StyledProps--main activityContainer"
    >
      <div
        class="StyledProps--font StyledProps--main activitySummary"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
        >
          <span
            class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--inline StyledProps--color StyledProps--color-grey800"
          >
            connectivityStatus
          </span>
          <span
            class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--font-size-medium"
          >
            na
          </span>
        </div>
        <p
          class="StyledProps--font StyledProps--main StyledProps--margin-top-small StyledProps--margin-bottom-small"
        >
          lastStatusCheckAt
           
          na
        </p>
        <p
          class="StyledProps--font StyledProps--main StyledProps--margin-top-small StyledProps--margin-bottom-medium"
        >
          lastSuccessfulStatusCheckAt
           
          na
        </p>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--without-shadow"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            connectors.stepThreeName
          </span>
        </button>
      </div>
      <div
        class="StyledProps--font StyledProps--main"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--margin-top-large StyledProps--margin-bottom-large StyledProps--color StyledProps--color-grey800"
        >
          changeHistory
        </p>
        <p
          class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey800"
        >
          lastUpdated
        </p>
        <p
          class="StyledProps--font StyledProps--main StyledProps--margin-top-small StyledProps--margin-bottom-small"
        >
           
        </p>
        <p
          class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey800"
        >
          connectorCreated
        </p>
        <p
          class="StyledProps--font StyledProps--main StyledProps--margin-top-small StyledProps--margin-bottom-medium"
        >
           
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Connector Details Page Rendering connector details with DockerRegistry: DockerRegistry 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main StyledProps--padding-large"
    style="height: inherit;"
  >
    <div
      class="Layout--vertical StyledProps--main StyledProps--padding-small"
      style="width: 67%;"
    >
      <div
        class="StyledProps--font StyledProps--main buttonContainer"
      >
        <div
          class="optionBtns"
        >
          <div
            class="item selected"
          >
            visual
          </div>
          <div
            class="item"
            data-test="connectorViewYaml"
          >
            yaml
          </div>
        </div>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color"
          id="editDetailsBtn"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-edit StyledProps--main StyledProps--padding-right-xsmall"
            icon="edit"
          >
            <svg
              data-icon="edit"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                edit
              </desc>
              <path
                d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            editDetails
          </span>
        </button>
      </div>
      <div
        class="Layout--horizontal StyledProps--main"
        style="height: 100%;"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
          style="width: 100%; height: 100%;"
        >
          <div
            class="Layout--horizontal StyledProps--main detailsSectionContainer"
          >
            <div
              class="StyledProps--font StyledProps--main detailsSection"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--color StyledProps--color-grey700"
              >
                overview
              </p>
            </div>
            <div
              class="StyledProps--font StyledProps--main detailsSection"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--color StyledProps--color-grey700"
              >
                credentials
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="Layout--vertical StyledProps--main activityContainer"
    >
      <div
        class="StyledProps--font StyledProps--main activitySummary"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
        >
          <span
            class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--inline StyledProps--color StyledProps--color-grey800"
          >
            connectivityStatus
          </span>
          <span
            class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--font-size-medium"
          >
            na
          </span>
        </div>
        <p
          class="StyledProps--font StyledProps--main StyledProps--margin-top-small StyledProps--margin-bottom-small"
        >
          lastStatusCheckAt
           
          na
        </p>
        <p
          class="StyledProps--font StyledProps--main StyledProps--margin-top-small StyledProps--margin-bottom-medium"
        >
          lastSuccessfulStatusCheckAt
           
          na
        </p>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--without-shadow"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            connectors.stepThreeName
          </span>
        </button>
      </div>
      <div
        class="StyledProps--font StyledProps--main"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--margin-top-large StyledProps--margin-bottom-large StyledProps--color StyledProps--color-grey800"
        >
          changeHistory
        </p>
        <p
          class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey800"
        >
          lastUpdated
        </p>
        <p
          class="StyledProps--font StyledProps--main StyledProps--margin-top-small StyledProps--margin-bottom-small"
        >
           
        </p>
        <p
          class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey800"
        >
          connectorCreated
        </p>
        <p
          class="StyledProps--font StyledProps--main StyledProps--margin-top-small StyledProps--margin-bottom-medium"
        >
           
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Connector Details Page Rendering connector details with K8sCluster: K8sCluster 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main StyledProps--padding-large"
    style="height: inherit;"
  >
    <div
      class="Layout--vertical StyledProps--main StyledProps--padding-small"
      style="width: 67%;"
    >
      <div
        class="StyledProps--font StyledProps--main buttonContainer"
      >
        <div
          class="optionBtns"
        >
          <div
            class="item selected"
          >
            visual
          </div>
          <div
            class="item"
            data-test="connectorViewYaml"
          >
            yaml
          </div>
        </div>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color"
          id="editDetailsBtn"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-edit StyledProps--main StyledProps--padding-right-xsmall"
            icon="edit"
          >
            <svg
              data-icon="edit"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                edit
              </desc>
              <path
                d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            editDetails
          </span>
        </button>
      </div>
      <div
        class="Layout--horizontal StyledProps--main"
        style="height: 100%;"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
          style="width: 100%; height: 100%;"
        >
          <div
            class="Layout--horizontal StyledProps--main detailsSectionContainer"
          >
            <div
              class="StyledProps--font StyledProps--main detailsSection"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--color StyledProps--color-grey700"
              >
                overview
              </p>
            </div>
            <div
              class="StyledProps--font StyledProps--main detailsSection"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--color StyledProps--color-grey700"
              >
                credentials
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="Layout--vertical StyledProps--main activityContainer"
    >
      <div
        class="StyledProps--font StyledProps--main activitySummary"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
        >
          <span
            class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--inline StyledProps--color StyledProps--color-grey800"
          >
            connectivityStatus
          </span>
          <span
            class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--font-size-medium"
          >
            na
          </span>
        </div>
        <p
          class="StyledProps--font StyledProps--main StyledProps--margin-top-small StyledProps--margin-bottom-small"
        >
          lastStatusCheckAt
           
          na
        </p>
        <p
          class="StyledProps--font StyledProps--main StyledProps--margin-top-small StyledProps--margin-bottom-medium"
        >
          lastSuccessfulStatusCheckAt
           
          na
        </p>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--without-shadow"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            connectors.stepThreeName
          </span>
        </button>
      </div>
      <div
        class="StyledProps--font StyledProps--main"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--margin-top-large StyledProps--margin-bottom-large StyledProps--color StyledProps--color-grey800"
        >
          changeHistory
        </p>
        <p
          class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey800"
        >
          lastUpdated
        </p>
        <p
          class="StyledProps--font StyledProps--main StyledProps--margin-top-small StyledProps--margin-bottom-small"
        >
           
        </p>
        <p
          class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey800"
        >
          connectorCreated
        </p>
        <p
          class="StyledProps--font StyledProps--main StyledProps--margin-top-small StyledProps--margin-bottom-medium"
        >
           
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Connector Details Page Rendering connector details: view text 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main StyledProps--padding-large"
    style="height: inherit;"
  >
    <div
      class="Layout--vertical StyledProps--main StyledProps--padding-small"
      style="width: 67%;"
    >
      <div
        class="StyledProps--font StyledProps--main buttonContainer"
      >
        <div
          class="optionBtns"
        >
          <div
            class="item selected"
          >
            visual
          </div>
          <div
            class="item"
            data-test="connectorViewYaml"
          >
            yaml
          </div>
        </div>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color"
          id="editDetailsBtn"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-edit StyledProps--main StyledProps--padding-right-xsmall"
            icon="edit"
          >
            <svg
              data-icon="edit"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                edit
              </desc>
              <path
                d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            editDetails
          </span>
        </button>
      </div>
      <div
        class="Layout--horizontal StyledProps--main"
        style="height: 100%;"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
          style="width: 100%; height: 100%;"
        >
          <div
            class="Layout--horizontal StyledProps--main detailsSectionContainer"
          >
            <div
              class="StyledProps--font StyledProps--main detailsSection"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--color StyledProps--color-grey700"
              >
                overview
              </p>
            </div>
            <div
              class="StyledProps--font StyledProps--main detailsSection"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--color StyledProps--color-grey700"
              >
                credentials
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="Layout--vertical StyledProps--main activityContainer"
    >
      <div
        class="StyledProps--font StyledProps--main activitySummary"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
        >
          <span
            class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--inline StyledProps--color StyledProps--color-grey800"
          >
            connectivityStatus
          </span>
          <span
            class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--font-size-medium"
          >
            na
          </span>
        </div>
        <p
          class="StyledProps--font StyledProps--main StyledProps--margin-top-small StyledProps--margin-bottom-small"
        >
          lastStatusCheckAt
           
          na
        </p>
        <p
          class="StyledProps--font StyledProps--main StyledProps--margin-top-small StyledProps--margin-bottom-medium"
        >
          lastSuccessfulStatusCheckAt
           
          na
        </p>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--without-shadow"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            connectors.stepThreeName
          </span>
        </button>
      </div>
      <div
        class="StyledProps--font StyledProps--main"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--margin-top-large StyledProps--margin-bottom-large StyledProps--color StyledProps--color-grey800"
        >
          changeHistory
        </p>
        <p
          class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey800"
        >
          lastUpdated
        </p>
        <p
          class="StyledProps--font StyledProps--main StyledProps--margin-top-small StyledProps--margin-bottom-small"
        >
           
        </p>
        <p
          class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey800"
        >
          connectorCreated
        </p>
        <p
          class="StyledProps--font StyledProps--main StyledProps--margin-top-small StyledProps--margin-bottom-medium"
        >
           
        </p>
      </div>
    </div>
  </div>
</div>
`;
